# TouHouTool

./: .gitignore  CMakeLists.txt  README.md  format_coding_style.py  make.bat  make.py  requirements.txt  setup.py
.github/workflows/: test.yml  wheels.yml
TargetTracker/: README.md  fsl_dataset.py  train.py
auto_th10/: __main__.py
cmd/: make_cl.bat  make_clang.bat
cpp/: CMakeLists.txt  _export.hh  _float32.hh  prints.hh  reflect.hh
cpp/default-print/: CMakeLists.txt  default_print.hh  impl.cc
cpp/include/auto_th10/: exception.hh  float32.hh  process.hh  readmem.hh  thobjects.hh
cpp/kb_control/: CMakeLists.txt  impl.cc  kb_control.hh
cpp/keyboard/: impl.cc
cpp/objects/: CMakeLists.txt  impl.cc
cpp/prints/: CMakeLists.txt  impl.cc  prints.hh
cpp/src/: auto_th10.cc
cpp/window/: CMakeLists.txt  bind.hh  impl.cc  kb_control.hh  keyboard.hh  window.hh
cpp/window/readmem/: _pid.hh  errors.hh  th10_fsl.hh
dataset/: README.md  __main__.py  fsl.py  gain_dependence.py
src/: define.hh  docs.hh  docs.ixx  keyboard.hh  keyboard.ixx  main.cpp  main.hh  main.ixx  operator_sv.ixx  prints.hh  prints.ixx  thtool.cpp
src/mouse/: mouse.hh  mouse.ixx
thtool/: __main__.py  kb_control.py  scene.py  score.py
